test/files/pos/t5031_3/Foo_1.scala
package foo.bar

object Foo {
  def bar = 42
}
