test/files/neg/macro-invalidimpl-i/Macros_Test_2.scala
package foo

object Test extends App {
  def foo = macro Impls.impl
}
